force-app/main/default/objects/Job_Scoring_Config__c/Job_Scoring_Config__c.object-meta.xml
<CustomObject>
    <description>Stores configurable weights for skills, achievements, and experience per job.</description>
    <label>Job Scoring Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Scoring Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>