force-app/main/default/objects/Job_Scoring_Config__c/fields/Achievement_Weight__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Weight__c</fullName>
    <defaultValue>0.40</defaultValue>
    <label>Achievement Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>