force-app/main/default/objects/Job_Scoring_Config__c/fields/Education_Weight__c.field-meta.xml
<CustomField>
    <fullName>Education_Weight__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Education Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>