force-app/main/default/objects/Job_Scoring_Config__c/fields/Experience_Weight__c.field-meta.xml
<CustomField>
    <fullName>Experience_Weight__c</fullName>
    <defaultValue>0.20</defaultValue>
    <label>Experience Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>