force-app/main/default/objects/Job_Scoring_Config__c/fields/Skill_Weight__c.field-meta.xml
<CustomField>
    <fullName>Skill_Weight__c</fullName>
    <defaultValue>0.40</defaultValue>
    <label>Skill Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>